# devops_reddit_scrapper

./: .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml
ansible/: ansible.cfg  inventory.ini  playbook.yml
ansible/roles/system_packages/defaults/: main.yml
ansible/roles/system_packages/meta/: main.yml
ansible/roles/system_packages/tasks/: main.yml
ansible/roles/uv_python/defaults/: main.yml
ansible/roles/uv_python/meta/: main.yml
ansible/roles/uv_python/tasks/: main.yml
k8s/: Chart.yaml  values.yaml
terraform/: main.tf  startup-script.sh
