[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI template for fetching DevOps content from Reddit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["k8s*", "terraform*"]
